--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,7 +31,11 @@ jobs:
         fi
 
     - name: Build
-      run: go build -v .
+      run: |
+        mkdir -p /go/src/github.com/ndlib
+        ln -s / /go/src/github.com/ndlib/bendo
+        export PATH="/go/bin:/usr/local/go/bin:$PATH"
+        make rpmgo build -v .
 
     - name: Test
       run: go test -v .
